--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ h1{
 .projects
 {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -118,6 +119,8 @@ h1{
     width: 200px; 
     height: auto;
     border-radius: 10px; 
+    display: block;
+    aspect-ratio: 1/1;
 }
 .projects span {
     margin-left: 20px; 
@@ -132,5 +135,7 @@ h1{
 .grid-item img {
     width: 100%;
     height: auto;
+    object-fit: cover;
     display: block;
+    aspect-ratio: 1/1;
 }
